# eecs753-project

./: Cargo.toml
.cargo/: config
src/: kernel.rs  lib.rs  main.rs  task.rs  task_control.rs  task_man.rs
src/arch/: cortex_m4f.rs  mod.rs
src/tasks/: accel.rs  gyro.rs  led.rs
tests/: periodic_task_test.rs
