[package]
name = "rtos"
version = "0.1.0"
authors = ["Amanita Muscaria"]
edition = "2018"

[dependencies]
cortex-m-rt = "0.6.12"
cortex-m = {version = "0.6.2", features=["inline-asm"]}
embedded-hal = "0.2.3"

[dependencies.f3]
features = ["rt"]
version = "0.6.1"

[dependencies.stm32f3]
version = "0.10.0"
features = ["stm32f303", "rt"]
